charts/manifests/patch-chart.yaml
---
# Source: longhorn/templates/daemonset-sa.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
  namespace: storage-system
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
---
# Source: longhorn/templates/deployment-driver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: storage-system
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
---
# Source: longhorn/templates/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: storage-system
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
---
