charts/manifests/minio-operator.yaml
---
# Source: minio-operator/templates/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: storage
  labels:
    helm.sh/chart: minio-operator-4.2.12
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/version: "v4.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - name: http
    port: 9090
  #- name: https
  #  port: 9443
  selector:
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator-console
---
# Source: minio-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operator
  namespace: storage
  labels:
    helm.sh/chart: minio-operator-4.2.12
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/version: "v4.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 4222
      name: http
    #- port: 4233
    #  name: https
  selector:
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator
---
# Source: minio-operator/templates/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-operator-console
  namespace: storage
  labels:
    helm.sh/chart: minio-operator-4.2.12
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/version: "v4.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio-operator
      app.kubernetes.io/instance: minio-operator-console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio-operator
        app.kubernetes.io/instance: minio-operator-console
    spec:
      serviceAccountName: console-sa
      containers:
        - name: minio-operator
          image: "minio/console:v0.10.3"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9090
            name: http
          #- containerPort: 9443
          #  name: https
          args:
          - server
          resources:
            {}
---
# Source: minio-operator/templates/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "minio-operator"
  namespace: storage
  labels:
    helm.sh/chart: minio-operator-4.2.12
    app.kubernetes.io/name: minio-operator
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/version: "v4.2.12"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio-operator
      app.kubernetes.io/instance: minio-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio-operator
        app.kubernetes.io/instance: minio-operator
    spec:
      serviceAccountName: minio-operator
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: minio-operator
          image: "minio/operator:v4.2.12"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              ephemeral-storage: 500Mi
              memory: 256Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # external-dns.alpha.kubernetes.io/hostname: minio.alboroto.live
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    cert-manager.io/cluster-issuer: letsencrypt-stg
    traefik.frontend.passHostHeader: "true"
    # ingress.kubernetes.io/auth-url: http://authelia-service.istio-system.svc:80/api/verify?rd=https://auth.alboroto.live/
    # traefik.ingress.kubernetes.io/router.middlewares: istio-system-authelia@kubernetescrd
    # traefik.ingress.kubernetes.io/router.middlewares: istio-system-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
    # ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: authelia-ingress-tls # alboroto.live
      hosts:
        # - minio.alboroto.live
        - minio.dev.achlys.tech
  rules:
    # - host: minio.alboroto.live
    - host: minio.dev.achlys.tech
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9090
