charts/manifests/open.yaml
# Source: opensearch/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-cluster-master-opensearch-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              opensearch-cluster-master-transport-client: "true"
  podSelector:
    matchLabels:
      opensearch-cluster-master-transport-client: "true"
---
# Source: opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-cluster-master
  labels:
    heritage: "Helm"
    release: "open"
    chart: "opensearch"
    app: "opensearch-cluster-master"
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    release: "open"
    chart: "opensearch"
    app: "opensearch-cluster-master"
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: opensearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opensearch-cluster-master-headless
  labels:
    heritage: "Helm"
    release: "open"
    chart: "opensearch"
    app: "opensearch-cluster-master"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like opensearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app: "opensearch-cluster-master"
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
# Source: opensearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch-cluster-master
  labels:
    heritage: "Helm"
    release: "open"
    chart: "opensearch"
    app: "opensearch-cluster-master"
  annotations:
    majorVersion: "7"
spec:
  serviceName: opensearch-cluster-master-headless
  selector:
    matchLabels:
      release: "open"
      chart: "opensearch"
      app: "opensearch-cluster-master"
  replicas: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: opensearch-cluster-master
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "10Gi"
      storageClassName: "manual"
  template:
    metadata:
      name: "opensearch-cluster-master"
      labels:
        release: "open"
        chart: "opensearch"
        app: "opensearch-cluster-master"
      annotations:
        configchecksum: 07d8b8d03497951529ba32eae5138d947e84bfecb62da6fb60d0b11d53af35c
    spec:
      #securityContext:
      #  fsGroup: 1000
      #  runAsUser: 1000
      #  runAsGroup: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - "opensearch-cluster-master"
      terminationGracePeriodSeconds: 120
      volumes:
        - name: config
          configMap:
            name: opensearch-cluster-master-config
      enableServiceLinks: true
      containers:
      - name: "opensearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "alvarogg777/opensearch-minimal-multiarch:1.0.0-x64"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          requests:
            cpu: 1000m
            memory: 100Mi
        volumeMounts:
          - name: "opensearch-cluster-master"
            mountPath: /usr/share/opensearch/data
          - name: config
            mountPath: /usr/share/opensearch/config/opensearch.yml
            subPath: opensearch.yml
---
# Source: opensearch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: opensearch-cluster-master
  labels:
    app: opensearch
    release: open
    heritage: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: open.k3d.io
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: open.k3d.io
      http:
        paths:
          - path: /
            backend:
              serviceName: opensearch-cluster-master
              servicePort: 9200
